Stop div from overlapping button

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
@@ -16,6 +16,7 @@
 .rules {
 	position: relative;
 	text-align: left;
+	clear: both;
 }
 
 .inner-rule {
@@ -25,11 +26,9 @@
 	cursor: pointer;
 	border-radius: 25px;
 	width: 100%;
-	clear: both;
 }
 
 .button-row {
-	padding: 0 16px 16px;
+	padding: 0 16px 8px;
 	float: right;
-	clear: both;
 }
